Shift + Space is one screen back, says the HIG.

BUG: 148054

svn path=/trunk/KDE/kdegraphics/okular/; revision=690227